<resources>
    <string name="app_name">Brootkiddie</string>
    <dimen name="topBarSize">45dp</dimen>
    <dimen name="titleFontSize">23sp</dimen>

    <string name="title_activity_main_map">MainMapActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_button_browser">browser</string>
    <string name="str_button_ting">ting</string>
    <string name="str_button_code">code</string>
    <string name="str_button_darknet">darknet</string>
    <string name="title_activity_browser">BrowserActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
</resources>
