<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ru.cryhards.brootkiddie.engine.android.EngineSurface
        android:id="@+id/main_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="toggleMenu"
        android:text="-->" />

    <LinearLayout
        android:id="@+id/navigation_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchBrowserActivity"
            android:text="@string/str_button_browser"
            android:id="@+id/button_darknet"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchTingActivity"
            android:text="@string/str_button_ting" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchCodeActivity"
            android:text="@string/str_button_code" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="launchDarkNetActivity"
            android:text="@string/str_button_darknet" />

    </LinearLayout>


</RelativeLayout>